# OpenGL

./: 2.2.basic_lighting.fs  CMakeLists.txt  basic_lighting_specular.cpp  camera.h  camera_class.cpp  fshader.fs  main.cpp  mesh.h  model.h  model_loading.cpp
src/: glad.c  shader_s.h  stb_image.cpp
